--- a/hospital/templates/payment_history.html
+++ b/hospital/templates/payment_history.html
@@ -10,10 +10,11 @@
     border-radius:8px;
     box-shadow:0 0 10px rgba(0,0,0,0.1);
 }
-h2{
+.heading h2{
     text-align:center;
     margin-bottom:25px;
     color:#1e3c72;
+    padding-left:300px;
 }
 .patient-info{
     margin-bottom:25px;
@@ -65,12 +66,35 @@ th{
 .btn:hover{
     background:#1e3c72;
 }
+.heading {
+    height:40px;
+    width:100%;
+    display:flex;
+}
+.heading a{
+    margin-left:230px;
+    padding-bottom:5px;
+    text-decoration:none;
+    padding-left:13px;
+    padding-right:15px;
+    padding-top:10px;
+    padding-bottom :5px;
+    color:white;
+    background-color:#1e3c72;
+    border-radius:10px;
+}
+
 </style>
 
 <div class="container">
-
-<h2>Patient Payment History</h2>
-
+    <div class="heading">
+    
+    
+        <h2>Patient Payment History</h2>
+        <a href="javascript:history.back()" class="btn_back">
+                <i class="fa-solid fa-arrow-left"></i> Back
+            </a>
+        </div>
 <!-- ================= PATIENT DETAILS ================= -->
 <div class="patient-info">
     <div class="row">
