--- a/hospital/templates/hospital_dashboard.html
+++ b/hospital/templates/hospital_dashboard.html
@@ -76,10 +76,12 @@
     th {
         background: #1e3c72;
         color: white;
+        margin-left:20px;
     }
 
     tr:hover {
         background-color: #f1f5fb;
+        margin-left:20px;
     }
 
     /* ===== ACTION BUTTONS ===== */
@@ -144,6 +146,7 @@
                 <td>
                     <!-- Pass doctor.id to URL -->
                     <a href="{% url 'edit_doctor' doctor.id %}" class="edit-btn">Edit</a>
+                    <a href="{% url 'all-appointment' doctor.id %}" class="edit-btn">All Appointment</a>
                 </td>
             </tr>
             {% empty %}
@@ -160,20 +163,19 @@
 
         <table>
             <tr>
-                <th>ID</th>
+                <th>S.No</th>
                 <th>Patient Name</th>
                 <th>Age</th>
                 <th>Doctor</th>
                 <th>Address</th>
                 <th>Mobile</th>
-                <th>Disease</th>
-                <th>Admitted status</th>
+                
                 <th>Action</th>
             </tr>
 
             {% for patient in patients %}
             <tr>
-                <td>{{ patient.id }}</td>
+                <td>{{ forloop.counter }}</td>
                 <td>{{ patient.name }}</td>
                 <td>{{ patient.age }}</td>
                 <td>
@@ -185,8 +187,7 @@
                 </td>
                 <td>{{ patient.address }}</td>
                 <td>{{ patient.admin.username }}</td>
-                <td>{{ patient.disease }}</td>
-                <td>{{ patient.ward_no }}</td>
+                
                 <td>
                     <!-- Added edit patient button -->
                     <a href="{% url 'edit_patient' patient.id %}"  class="edit-btn">Edit</a>
