--- a/hospital/templates/hospital_dashboard.html
+++ b/hospital/templates/hospital_dashboard.html
@@ -116,7 +116,9 @@
     <!-- ===== ACTION BUTTONS ===== -->
     <div class="action-bar">
         <a href="{% url 'add_doctor' %}" class="btn">Add Doctor</a>
-        <a href="{% url 'add_patient' %}" class="btn">Add Patient</a>
+        <a href="{% url 'add_patient' %}" class="btn">Register Patient</a>
+        <a href="{% url 'admit-patient' %}" class="btn">Admit patient</a>
+        <a href="{% url 'admitted-patient' %}" class="btn">Admitted Patient </a>
     </div>
 
     <!-- ================= DOCTOR TABLE ================= -->
