--- a/hospital/templates/edit_patient.html
+++ b/hospital/templates/edit_patient.html
@@ -27,12 +27,15 @@ Edit Patient
 
     label {
         font-weight: 600;
+        font-size: 14px;
     }
 
     input, select, textarea {
         width: 100%;
         padding: 10px;
         margin-top: 5px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
     }
 
     textarea {
@@ -47,7 +50,8 @@ Edit Patient
         color: white;
         font-size: 16px;
         cursor: pointer;
-        border-radius: 4px;
+        border-radius: 5px;
+        margin-top: 15px;
     }
 
     .btn-submit:hover {
@@ -101,22 +105,18 @@ Edit Patient
 
         <div class="form-group">
             <label>Mobile</label>
-            <input type="text" name="mobile" value="{{ user.username }}" required>
-        </div>
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" name="password" value="{{ user.password }}" required>
+            <input type="text" name="mobile" value="{{ patient.admin.username }}" required>
         </div>
 
-        
-        
+        <div class="form-group">
+            <label>Password</label>
+            <input type="password" name="password"value="{{patient.admin.password}}">
+        </div>
 
         <div class="form-group">
             <label>Email</label>
             <input type="email" name="email" value="{{ patient.email }}" required>
         </div>
-
-        
 
         <button type="submit" class="btn-submit">
             Update Patient
