--- a/hospital/templates/hospital_dashboard.html
+++ b/hospital/templates/hospital_dashboard.html
@@ -119,6 +119,8 @@
         <a href="{% url 'add_patient' %}" class="btn">Register Patient</a>
         <a href="{% url 'admit-patient' %}" class="btn">Admit patient</a>
         <a href="{% url 'admitted-patient' %}" class="btn">Admitted Patient </a>
+        <a href="{% url 'create-medicine-bill' %}" class="btn">Create medicine bill </a>
+        <a href="{% url 'all-medicine-bill' %}" class="btn">All medicine bill </a>
     </div>
 
     <!-- ================= DOCTOR TABLE ================= -->
