--- a/hospital/templates/base.html
+++ b/hospital/templates/base.html
@@ -103,6 +103,11 @@
             border-radius:5px;
             text-decoration:none;
         }
+        @media screen and (width:320px){
+            .header h1{
+                font-size:25px;
+            }
+        }
     </style>
 </head>
 <body>
